<resources>
    <string name="app_name">project</string>
    <string name="layout">layout</string>
    <string name="settings">settings</string>
    <string name="classes">classes</string>
    <string name="subjects">subjects</string>
    <string name="teachers">teachers</string>
    <string name="for_teachers">For Teachers</string>
    <string name="for_subjects">For Subjects</string>
    <string name="for_classes">For Classes</string>
    <string name="welcome_register">Welcome Register</string>
    <string name="logout">Logout</string>
    <string name="image">image</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_example_com">admin@example.com</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="search_teachers">Search Teachers</string>
    <string name="home">Home</string>
    <string name="teacher">Teachers</string>
    <string name="subject">Subjects</string>
    <string name="classe">Classes</string>
    <string name="subject_name">Subject Name</string>
    <string name="choose_an_icon">Choose an Icon:</string>
    <string name="book_icon">book icon</string>
    <string name="internet_icon">internet icon</string>
    <string name="laptop_icon">laptop icon</string>
    <string name="add_subject">Add Subject</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_the_classes">Select The Classes:</string>
    <string name="add_teacherfr">Add Teacher</string>
    <string name="choose_subject">choose Subject:</string>
    <string name="number_of_days_per_week_to_take_it">Number of days per week to take it</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="emaill">Email:</string>
    <string name="gender">Gender:</string>
    <string name="subjectt">Subject:</string>
    <string name="classss">Class:</string>
    <string name="the_classes_that_teach">The classes that teach:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_08_00_08_40">08:00–08:40</string>
    <string name="_08_45_09_25">08:45–09:25</string>
    <string name="_09_30_10_10">09:30–10:10</string>
    <string name="_10_15_10_55">10:15–10:55</string>
    <string name="_11_00_11_40">11:00–11:40</string>
    <string name="_11_45_12_25">11:45–12:25</string>
    <string name="_12_30_13_10">12:30–13:10</string>
    <string name="_13_15_13_55">13:15–13:55</string>
    <string name="_14_00_14_40">14:00–14:40</string>
    <string name="time_day">Time / Day</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">sat</string>
    <string name="write_notes_here">Write notes here...</string>
    <string name="notes">Notes</string>
    <string name="assigned_teachers_subjects"><![CDATA[Assigned Teachers & Subjects]]></string>
    <string name="done">Done</string>
    <string name="time_dayy">Time/Day</string>
    <string name="dr_nour_s_schedule">Dr. Nour\'s Schedule</string>
    <string name="subject_mathematics_nteaching_2_classes_ntotal_weekly_hours_5">Subject: Mathematics\nTeaching 2 classes\nTotal weekly hours: 5</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="no_schedule_found_for_this_teacher">No schedule found for this teacher</string>
    <string name="close">Close</string>
    <string name="delete_teacher">Delete Teacher</string>
    <string name="todo">TODO</string>
    <string name="mathmaticesss">mathmaticesss</string>
    <string name="_3_hours_week">3 hours/week</string>
    <string name="students_in_class_a">Students in Class A</string>
    <string name="no_students_in_this_class">No students in this class</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="add_student">Add Student</string>
    <string name="monday">Monday</string>
    <string name="_08_00_08_45">08:00-08:45</string>
    <string name="class_a">Class A</string>
    <string name="mat">MAT</string>
    <string name="teacher_namee">Teacher Name</string>
    <string name="subject_email">Subject / Email</string>
    <string name="no_teacher_in_this_class">No Teacher in this class</string>
    <string name="subjectss">Subjects</string>
    <string name="todoo">TODO</string>
    <string name="class_aa">Class A</string>
    <string name="students_25">Students: 25</string>
    <string name="teacher_mr_smith">Teacher: Mr. Smith</string>
    <string name="schedule">Schedule</string>
    <string name="clearr">Clear</string>
    <string name="deletee">Delete</string>
    <string name="add">Add</string>
    <string name="select_subject">Select Subject:</string>
    <string name="mon_08_00_08_45">mon (08:00_08:45)</string>
    <string name="chemistry">chemistry</string>
    <string name="physics_icon">physics_icon</string>
    <string name="chemistry_icon">chemistry_icon</string>
    <string name="math_icon">math_icon</string>
    <string name="subject_icon">subject_icon</string>
    <string name="language_icon">language_icon</string>
    <string name="add_studentt">Add Student</string>

    <string name="aapp_name">project</string>
    <string name="layoutt">layout</string>
    <string name="settingss">settings</string>
    <string name="welcome_student">Welcome Student</string>
    <string name="sec">View Schedule</string>
    <string name="marks">View Marks</string>
    <string name="ass">Assignments</string>
    <string name="weekly_schedulee">Weekly Schedule</string>
    <string name="your_marks">Your Marks</string>
    <string name="assignments">Assignments</string>
    <string name="upcoming_exams">Upcoming Exams</string>
    <string name="your_subjects">Your Subjects</string>
    <string name="view_book">View Book</string>
    <string name="this_week_s_reminders">This Week’s Reminders</string>
    <string name="exams">Exams</string>
    <string name="assignments_reminder">Assignments</string>
    <string name="add_the_linke_of_the_book">add the linke of the Book</string>
    <string name="book_lint">book lint</string>
    <string name="book_link">book link</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="attendance">Attendance</string>
    <string name="assignmentss">Assignments</string>
    <string name="class_list">Class List</string>
    <string name="admin">Admin</string>
    <string name="logouttt">Logout</string>
    <string name="submit_marks">Submit Marks</string>
    <string name="student_name">Student Name</string>

    <string-array name="week_days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
    </string-array>
</resources>