<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/setting"
        android:scaleType="centerCrop"
        android:padding="4dp"
        app:tint="#0C0C12"
        android:contentDescription="@string/image"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_example_com"
        android:textSize="14sp"
        android:textColor="#525252"
        android:layout_marginBottom="24dp" />


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="8dp"
        android:backgroundTint="#1C3557"
        android:textColor="@android:color/white" />

</LinearLayout>
