<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/rounded_dialog">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        >

        <EditText
            android:id="@+id/studentName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/full_name"
            android:autofillHints="name"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:inputType="text"
            android:layout_marginTop="8dp"

            />

        <EditText
            android:id="@+id/studentEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            />

        <RadioGroup
            android:id="@+id/genderGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"

            >

            <RadioButton
                android:id="@+id/genderMale2"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/male"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:fontFamily="serif"
                android:textStyle="bold"

                />
            <RadioButton
                android:id="@+id/genderFemale2"
                android:text="@string/female"
                android:layout_height="50dp"
                android:layout_width="130dp"
                android:textSize="20sp"
                android:fontFamily="serif"
                android:textStyle="bold"

                />

        </RadioGroup>

        <Button
            android:id="@+id/addstu"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/add_studentt"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="#1C3557"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</LinearLayout>
