<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mon_08_00_08_45"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_subject"
        android:textSize="20sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/subjectSpinnersch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deletee"
            android:textColor="@android:color/white"
            android:backgroundTint="#750303"
            android:layout_marginEnd="8dp"
            android:visibility="gone" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/addsubtosch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:backgroundTint="#1C3557"
            android:textColor="@android:color/white"  />
    </LinearLayout>

</LinearLayout>