<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/table_row"
    android:padding="12dp"
    android:layout_marginBottom="4dp"
    android:elevation="2dp"
    android:baselineAligned="false" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_08_00_08_45"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/classNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_a"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center" />

        <TextView
            android:id="@+id/subjectCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mat"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout>